# mycroft-cl

./: .gitignore  .pre-commit-config.yaml  README.md  mycroft  mycroft.py  mycroft_cl.py  pyproject.toml  test_mycroft-cli.py
.mypy_cache/3.8/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  datetime.data.json  datetime.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  mock.data.json  mock.meta.json  mycroft.data.json  mycroft.meta.json  mycroft_cl.data.json  mycroft_cl.meta.json  posix.data.json  posix.meta.json  string.data.json  string.meta.json  sys.data.json  sys.meta.json  test_mycroft-cli.data.json  test_mycroft-cli.meta.json  threading.data.json  threading.meta.json  time.data.json  time.meta.json  (+8 more)
.mypy_cache/3.8/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.8/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.8/json/: __init__.data.json  __init__.meta.json  decoder.data.json  decoder.meta.json  encoder.data.json  encoder.meta.json
.mypy_cache/3.8/logging/: __init__.data.json  __init__.meta.json
.mypy_cache/3.8/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
.mypy_cache/3.8/unittest/: __init__.data.json  __init__.meta.json  async_case.data.json  (+13 more)
