[tool.poetry]
name = "mycroft-cl"
version = "0.1.0"
description = "A new mycroft command line interface, that is ment to be decoupled from any one particular mycroft instance."
authors = ["Andrew Morris <andy_morris22@yahoo.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^8.1"

[tool.poetry.dev-dependencies]
poetry = {git = "https://github.com/python-poetry/poetry.git"}
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
